@@ -1,3 +1,10 @@
+2007-03-29  Dan Williams  <dcbw@redhat.com>
+
+	* src/NetworkManager.c
+		- (fixup_hostname): set unique hostname to work around avahi bug
+			where it dies when a hostname conflict is encountered
+			*HACK*, goes away when avahi gets fixed
+
 2007-03-27  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-device-802-11-mesh-olpc.c
